--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "plugin-auto-alt-caption-title-on-images-ai-enhanced",
+  "name": "strapi-plugin-auto-alt-caption-title-on-images-ai-enhanced",
   "version": "1.0.0",
-  "description": "This is the description of the plugin.",
+  "description": "A Strapi plugin that automatically generates alternative text, caption, and name for images using AI-powered image analysis.",
   "strapi": {
-    "name": "plugin-auto-alt-caption-title-on-images-ai-enhanced",
-    "description": "Description of Plugin Auto Alt Caption Title On Images Ai Enhanced plugin",
+    "name": "auto-alt-caption-title-on-images-ai-enhanced",
+    "description": "Automatically generates alt, caption, and name for images using AI.",
     "kind": "plugin",
-    "displayName": "Plugin Auto Alt Caption Title On Images Ai Enhanced"
+    "displayName": "Auto Alt Caption Title on Images with AI Enhancement"
   },
   "dependencies": {
     "@strapi/design-system": "^1.6.3",
@@ -31,11 +31,11 @@
     "styled-components": "^5.2.1"
   },
   "author": {
-    "name": "A Strapi developer"
+    "name": "Andy Cinquin"
   },
   "maintainers": [
     {
-      "name": "A Strapi developer"
+      "name": "Andy Cinquin"
     }
   ],
   "engines": {
