--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,8 +19,8 @@ jobs:
 
       - name: Configure Git
         run: |
-          git config --local user.email "your-email@example.com"
-          git config --local user.name "Your Name"
+          git config --local user.email "cinquin.andy@gmail.com"
+          git config --local user.name "CINQUIN Andy"
 
       - name: Use Node.js
         uses: actions/setup-node@v4
