✨ Update dependency installation commands
Changed dependency installation commands to use 'yarn' instead of 'npm' for consistency and added '--force' flag for yarn install.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
 
       - name: Install Dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn install --force --frozen-lockfile
 
       - name: Increment Package Version and Update Tag
         id: version-bump
