--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "@strapi/icons": "^1.6.3",
     "prettier": "^3.2.5",
     "prop-types": "^15.7.2",
-    "react-toastify": "^10.0.5"
-  },
-  "devDependencies": {
+    "react-toastify": "^10.0.5",
     "node-fetch": "^3.3.2",
     "openai": "^4.29.2",
     "react": "^18.2.0",
@@ -28,7 +26,9 @@
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0",
     "react-router-dom": "^5.2.0",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "react-toastify": "^10.0.5",
+    "openai": "^4.29.2"
   },
   "author": {
     "name": "Andy Cinquin"
