--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0",
     "react-router-dom": "^5.2.0",
-    "styled-components": "^5.2.1",
-    "react-toastify": "^10.0.5",
-    "openai": "^4.29.2"
+    "styled-components": "^5.2.1"
   },
   "author": {
     "name": "Andy Cinquin"
