--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"@strapi/design-system": "^1.6.3",
 		"@strapi/helper-plugin": "^4.6.0",
 		"@strapi/icons": "^1.6.3",
-		"node-fetch": "^3.3.2",
+    "node-fetch": "^3.3.0",
+    "form-data": "^4.0.0",
 		"prettier": "^3.2.5",
 		"prop-types": "^15.7.2",
 		"react": "^18.2.0",
